# edward

./: CMakeLists.txt  README.md  main.c
1_simple_finctions/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
1_simple_finctions/Google_tests/: CMakeLists.txt  FirstTest.cpp  input.txt  output.txt
2_array_finctions/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
2_array_finctions/Google_tests/: CMakeLists.txt  FirstTest.cpp
google_tests_lib/lib/: CMakeLists.txt
test1/: CMakeLists.txt  main.c
test2/: CMakeLists.txt  main.c
